feat(api): 添加用户认证功能

--- a/apps/web-antd/src/locales/langs/en-US/page.json
+++ b/apps/web-antd/src/locales/langs/en-US/page.json
@@ -10,5 +10,23 @@
     "title": "Dashboard",
     "analytics": "Analytics",
     "workspace": "Workspace"
+  },
+  "k8s": {
+    "title": "Kubernetes Management",
+    "clusters": "Clusters",
+    "clusterDetail": "Cluster Detail",
+    "pods": "Pods",
+    "podDetail": "Pod Detail",
+    "deployments": "Deployments",
+    "services": "Services",
+    "configmaps": "ConfigMaps",
+    "cronjobs": "CronJobs",
+    "resources": "Other Resources",
+    "namespaces": "Namespaces",
+    "nodes": "Nodes",
+    "secrets": "Secrets",
+    "statefulsets": "StatefulSets",
+    "daemonsets": "DaemonSets",
+    "jobs": "Jobs"
   }
 }
